--- a/static/css/style.css
+++ b/static/css/style.css
@@ -162,3 +162,20 @@ body.modal-open {
 .splash h2 {
     color: white;
 }
+
+#map { 
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: calc(100% - 60px);
+    background-color: #f3f3f3;
+    top: 0;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0;
+    overflow: scroll;
+}
+
+.map-container {
+    height: 200px;
+}
