--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ a {
 
 body {
     background-color: #f3f3f3;
+    margin: 0;
 
 }
 
@@ -177,6 +178,15 @@ body.modal-open {
 }
 
 #mapContainer {
-    /* height: 500px;
-    width: 500px; */
+    height: 100%;
+    width: 100%;
+}
+
+.map-close-button {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    font-size: 4em;
+    color: black;
+    z-index: 2000;
 }
