--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,27 +166,31 @@ body.modal-open {
 
 #map { 
     display: none;
+    flex-direction: column;
     position: fixed;
     width: 100%;
-    height: calc(100% - 60px);
+    height: 100%;
     background-color: #f3f3f3;
     top: 0;
     align-items: center;
     justify-content: center;
-    padding: 30px 0;
     overflow: scroll;
 }
 
 #mapContainer {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 95%;
 }
 
-.map-close-button {
-    position: fixed;
-    right: 20px;
-    top: 20px;
-    font-size: 4em;
+.map-controls {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+    margin-top: 5px;
+}
+
+.map-controls > div {
     color: black;
-    z-index: 2000;
+    padding: 8px 4px;
+    cursor: pointer;
 }
